<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constaintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddMovieFragment">

            <EditText
                android:id="@+id/titleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/actorsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/actors_separated_with"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText"
                android:autofillHints="" />

            <EditText
                android:id="@+id/creatorsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/creators_separated_with"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actorsText" />

            <EditText
                android:id="@+id/storyText"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/genreChips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creatorsText">

                <com.google.android.material.chip.Chip
                    android:id="@+id/dramaChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/bg_chip_state_list"
                    android:checkable="true"
                    android:text="@string/drama" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sportChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/bg_chip_state_list"
                    android:checkable="true"
                    android:text="@string/sport" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/documentationChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:chipBackgroundColor="@color/bg_chip_state_list"
                    android:text="@string/documentation" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/thrillerChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:chipBackgroundColor="@color/bg_chip_state_list"
                    android:text="@string/thriller" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/horrorChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    app:chipBackgroundColor="@color/bg_chip_state_list"
                    android:text="@string/horror" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/kidsChip"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/bg_chip_state_list"
                    android:text="@string/kids" />
            </com.google.android.material.chip.ChipGroup>

            <RatingBar
                android:id="@+id/ratingBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genreChips" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/story"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="Save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                app:layout_constraintEnd_toStartOf="@+id/saveBtn"
                app:layout_constraintTop_toTopOf="@+id/saveBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
